--- a/Copy_of_PyTorch_Classification.ipynb
+++ b/Copy_of_PyTorch_Classification.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "A100",
-      "authorship_tag": "ABX9TyMgnOy7EzbXD2WtxwyejM3u",
+      "authorship_tag": "ABX9TyO0LBDp6XeeoU2OEuz2Zzh/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -299,7 +299,7 @@
       "source": [
         "## Build Model\n",
         "\n",
-        "1. Device agnostoc code\n",
+        "1. <b> *Device agnostoc code* </b>\n",
         "2. Construct a model by subclassing `nn.Module`\n",
         "3. loss function and optimizer\n",
         "4. Create training and test loop"
@@ -502,6 +502,15 @@
       ],
       "metadata": {
         "id": "mglQZykoTc1f"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Make `loss_fn` and `optimizer`\n"
+      ],
+      "metadata": {
+        "id": "3fX6kqtx_imD"
       }
     },
     {
@@ -2920,6 +2929,36 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## From the Py Torch Documentation"
+      ],
+      "metadata": {
+        "id": "qWEOSYa0nNEH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "    from torchmetrics import Accuracy\n",
+        "except:\n",
+        "    !pip install torchmetrics==0.9.3 # this is the version we're using in this notebook (later versions exist here: https://torchmetrics.readthedocs.io/en/stable/generated/CHANGELOG.html#changelog)\n",
+        "    from torchmetrics import Accuracy\n",
+        "\n",
+        "# Setup metric and make sure it's on the target device\n",
+        "torchmetrics_accuracy = Accuracy(task='multiclass', num_classes=4).to(device)\n",
+        "\n",
+        "# Calculate accuracy\n",
+        "torchmetrics_accuracy(y_preds, y_blob_test)"
+      ],
+      "metadata": {
+        "id": "CkIZYKdBnMtW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Exercises"
       ],
       "metadata": {
@@ -2928,14 +2967,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import torch\n",
-        "from torch import nn\n",
-        "\n",
-        "# Setup device agnostic code\n",
-        "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-        "device"
-      ],
+      "source": [],
       "metadata": {
         "id": "KgQovILBbRBH"
       },
@@ -2944,10 +2976,16 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Setup random seed\n",
-        "RANDOM_SEED = 42"
-      ],
+      "source": [],
+      "metadata": {
+        "id": "1iUyOeiDOtGp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
       "metadata": {
         "id": "0wVQPfVAWOZk"
       },
@@ -2956,18 +2994,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Create a dataset with Scikit-Learn's make_moons()\n",
-        "import sklearn\n",
-        "from sklearn.datasets import make_moons\n",
-        "# Make 1000 circles\n",
-        "n_samples = 1000\n",
-        "\n",
-        "# Create circles\n",
-        "X, y = make_circles(n_samples,\n",
-        "                    noise = 0.05,\n",
-        "                    random_state=42)\n"
-      ],
+      "source": [],
       "metadata": {
         "id": "qyD9j_Y6cVDL"
       },
@@ -2976,14 +3003,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Turn data into a DataFrame\n",
-        "import pandas as pd\n",
-        "circles = pd.DataFrame({'X1': X[:, 0],\n",
-        "                        'X2': X[:, 1],\n",
-        "                        'label': y})\n",
-        "circles.head()"
-      ],
+      "source": [],
       "metadata": {
         "id": "ooTpOUxtcncC"
       },
@@ -2992,12 +3012,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "plt.scatter(x=X[:, 0],\n",
-        "            y=X[:, 1],\n",
-        "            c=y,\n",
-        "            cmap=plt.cm.RdYlBu);"
-      ],
+      "source": [],
       "metadata": {
         "id": "60Ixao1kdEZD"
       },
@@ -3005,12 +3020,109 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# Turn data into tensors of dtype float\n",
-        "X = torch.from_numpy(X).type(torch.float)\n",
-        "y = torch.from_numpy(y).type(torch.float)"
+        "### Working with NumPy Data in PyTorch: Key Points to Remember- at least for myself\n",
+        "\n",
+        "1. **Data Type Conversion:**\n",
+        "   - Data imported from scikit-learn (or other libraries) is typically in the **NumPy data format**, which needs to be converted into PyTorch tensors for compatibility.\n",
+        "   - Use `torch.tensor(data, dtype=torch.float)` to ensure the data is in the correct format.\n",
+        "   - **Example:**\n",
+        "     ```python\n",
+        "     import torch\n",
+        "     import numpy as np\n",
+        "\n",
+        "     numpy_data = np.array([[1.0, 2.0], [3.0, 4.0]])\n",
+        "     torch_data = torch.tensor(numpy_data, dtype=torch.float)\n",
+        "     ```\n",
+        "\n",
+        "2. **Device Compatibility:**\n",
+        "   - Ensure that any tensor you create is moved to the appropriate device (`cpu` or `cuda`) before computation.\n",
+        "   - A common error arises when tensors remain on the CPU but are used with a model or operation on the GPU.\n",
+        "   - **Example:**\n",
+        "     ```python\n",
+        "     device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "     torch_data = torch.tensor(numpy_data, dtype=torch.float).to(device)\n",
+        "     ```\n",
+        "\n",
+        "3. **Ensure Matching Data Types:**\n",
+        "   - PyTorch models and operations often require `torch.float` for numerical computations, but integers (`torch.int`) may be required for labels or indices.\n",
+        "   - Carefully manage data types when converting from NumPy, as NumPy's `int32` or `float64` might cause issues in PyTorch operations.\n",
+        "\n",
+        "4. **Gradient Computation:**\n",
+        "   - If you're using tensors for model inputs that require gradient computation, ensure `requires_grad=True` is set during tensor creation.\n",
+        "   - **Example:**\n",
+        "     ```python\n",
+        "     torch_data = torch.tensor(numpy_data, dtype=torch.float, requires_grad=True).to(device)\n",
+        "     ```\n",
+        "\n",
+        "5. **Keep an Eye on CPU/GPU Transfers:**\n",
+        "   - Data generated during computation might end up on the CPU (e.g., results from NumPy or after detaching gradients).\n",
+        "   - Always check the `.device` property of tensors, especially when combining operations.\n",
+        "   - **Example:**\n",
+        "     ```python\n",
+        "     # Check where the tensor is located\n",
+        "     print(torch_data.device)\n",
+        "\n",
+        "     # Move to device if necessary\n",
+        "     torch_data = torch_data.to(device)\n",
+        "     ```\n",
+        "\n",
+        "6. **Avoid Implicit Data Conversion:**\n",
+        "   - Operations between NumPy arrays and PyTorch tensors may lead to implicit conversions that can cause errors.\n",
+        "   - Convert NumPy arrays to PyTorch tensors explicitly before performing operations.\n",
+        "\n",
+        "7. **Random Seed Consistency:**\n",
+        "   - Ensure reproducibility by setting random seeds for both NumPy and PyTorch, especially when generating data or initializing models.\n",
+        "   - **Example:**\n",
+        "     ```python\n",
+        "     import numpy as np\n",
+        "     import torch\n",
+        "\n",
+        "     np.random.seed(42)\n",
+        "     torch.manual_seed(42)\n",
+        "     ```\n",
+        "\n",
+        "8. **Batch Dimension Awareness:**\n",
+        "   - Ensure that data intended for model inputs includes a batch dimension, even for single samples. Use `.unsqueeze(0)` to add the batch dimension if necessary.\n",
+        "   - **Example:**\n",
+        "     ```python\n",
+        "     single_sample = torch.tensor([1.0, 2.0], dtype=torch.float).to(device)\n",
+        "     single_sample = single_sample.unsqueeze(0)  # Shape becomes [1, 2]\n",
+        "     ```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### Common Errors to Watch Out For\n",
+        "\n",
+        "1. **Device Mismatch:**\n",
+        "   - **Example Error:** `RuntimeError: Expected all tensors to be on the same device, but found at least two devices, cpu and cuda:0`.\n",
+        "   - **Solution:** Ensure all tensors and models are on the same device.\n",
+        "\n",
+        "2. **Data Type Incompatibility:**\n",
+        "   - **Example Error:** `RuntimeError: Expected scalar type Float but found Double`.\n",
+        "   - **Solution:** Convert NumPy data to the appropriate PyTorch data type (`torch.float` for numerical tensors).\n",
+        "\n",
+        "3. **Missing Batch Dimension:**\n",
+        "   - **Example Error:** `RuntimeError: Expected 4-dimensional input for 4-dimensional weight`.\n",
+        "   - **Solution:** Add a batch dimension using `.unsqueeze()` or reshape the data appropriately.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### Key Takeaways\n",
+        "\n",
+        "- Always **convert NumPy data to PyTorch tensors** with the correct data type (`torch.float` or `torch.int`).\n",
+        "- Pay attention to **device placement** (`cpu` or `cuda`) and ensure consistency across operations.\n",
+        "- Set random seeds for reproducibility.\n",
+        "- Handle batch dimensions explicitly to avoid runtime errors.\n"
       ],
+      "metadata": {
+        "id": "8pL_yVcMs0X0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
       "metadata": {
         "id": "E2j13Y5md7VS"
       },
@@ -3018,17 +3130,190 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# Split the data into train and test sets(80% train, 20% test)\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X,\n",
-        "                                                    y,\n",
-        "                                                    test_size=0.2,\n",
-        "                                                    random_state=42)"
+        "## Convert to PyTorch tensors\n",
+        "\n",
+        "### Why Use .unsqueeze(1)?\n",
+        "1. Shape of `y_train` and `y_test`:\n",
+        "\n",
+        "* The labels (`y_train` and `y_test`) generated by `make_moons` are 1D arrays with shape (`n_samples,`) (e.g., `[0, 1, 0, 1, ...]`).\n",
+        "* PyTorch expects labels for binary classification to have a shape matching the model's output logits when using loss functions like `BCEWithLogitsLoss`. Typically, the logits are shaped (`n_samples, 1`).\n",
+        "2. What `.unsqueeze(1)` Does:\n",
+        "\n",
+        "* `.unsqueeze(1)` *adds* an extra dimension, changing the shape from (`n_samples,`) to (`n_samples, 1`).\n",
+        "This ensures that the labels align with the model's output logits, which are usually shaped as (`n_samples, 1`) for binary classification.\n",
+        "3. Why It’s Needed:\n",
+        "\n",
+        "Without `.unsqueeze(1)`, you’ll likely encounter a shape mismatch error when calculating the loss, such as:"
       ],
       "metadata": {
-        "id": "1BoZ7yxbedm3"
+        "id": "dn-wRslBCKuf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "f_4Nbog-XBPw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train = torch.tensor(X_train, dtype=torch.float32)\n",
+        "y_train = torch.tensor(y_train, dtype=torch.float32).unsqueeze(1)\n",
+        "X_test = torch.tensor(X_test, dtype=torch.float32)\n",
+        "y_test = torch.tensor(y_test, dtype=torch.float32).unsqueeze(1)"
+      ],
+      "metadata": {
+        "id": "pz91miGHBRBM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class CGMoonClassifier(nn.Module):\n",
+        "    def __init__(self, input_dim, hidden_dim, output_dim):\n",
+        "        super(CGMoonClassifier, self).__init__()\n",
+        "        self.layer_1 = nn.Linear(input_dim, hidden_dim)\n",
+        "        self.relu_1 = nn.ReLU()\n",
+        "        self.layer_2 = nn.Linear(hidden_dim, hidden_dim)\n",
+        "        self.relu_2 = nn.ReLU()\n",
+        "        self.output_layer = nn.Linear(hidden_dim, output_dim)\n",
+        "        self.sigmoid = nn.Sigmoid()  # Add sigmoid here\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = self.relu_1(self.layer_1(x))\n",
+        "        x = self.relu_2(self.layer_2(x))\n",
+        "        x = self.sigmoid(self.output_layer(x))  # Apply sigmoid at the output\n",
+        "        return x"
+      ],
+      "metadata": {
+        "id": "ZlYyyjcTJByj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"X_train shape: {X_train.shape}\")  # Expected: [1200, 2]\n",
+        "print(f\"y_train shape: {y_train.shape}\")  # Expected: [1200, 1]\n",
+        "print(f\"X_test shape: {X_test.shape}\")    # Expected: [300, 2]\n",
+        "print(f\"y_test shape: {y_test.shape}\")    # Expected: [300, 1]\n"
+      ],
+      "metadata": {
+        "id": "1LDLxeM5Vm77"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, y_train = X_train.to(device), y_train.to(device)\n",
+        "X_test, y_test = X_test.to(device), y_test.to(device)\n",
+        "model = model.to(device)\n"
+      ],
+      "metadata": {
+        "id": "TGAH03rvVsiN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Build a model by subclassing nn.Module that incorporates non-linear activation functions and is capable of fitting the data you created in 1.\n"
+      ],
+      "metadata": {
+        "id": "z_pwZhG8xN_d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Steps to Build and Fit the Model\n",
+        "1. **Understand the Data**\n",
+        "\n",
+        "* The data from question 1 needs to be recalled or recreated. For this example, I'll assume it's a simple 2D dataset (e.g., using scikit-learn's `make_moons`, `make_circles`, or `make_regression`).\n",
+        "\n",
+        "2. Define the Model\n",
+        "\n",
+        "* Subclassing `nn.Module` allows you to create a custom model by defining layers and the forward pass.\n",
+        "* Include non-linear activation functions (like `ReLU`, `Sigmoid`, or `Tanh`) to ensure the model can fit complex, non-linear data.\n",
+        "* Use a sequential or layer-by-layer structure for clarity.\n",
+        "\n",
+        "3. Train the Model\n",
+        "\n",
+        "* Define a loss function (e.g., MSELoss for regression, BCEWithLogitsLoss for binary classification).\n",
+        "* Choose an optimizer (e.g., Adam for adaptive learning rates).\n",
+        "* Use a training loop with forward passes, loss computation, backpropagation, and weight updates.\n"
+      ],
+      "metadata": {
+        "id": "yweolXIBANM2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Instantiate the model\n",
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "model = CGMoonClassifier(input_dim=2, hidden_dim=32, output_dim=1).to(device)\n",
+        "\n",
+        "# Define loss and optimizer\n",
+        "loss_fn = nn.BCELoss()\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+        "\n",
+        "# Move data to device\n",
+        "X_train, y_train = X_train.to(device), y_train.to(device)\n",
+        "X_test, y_test = X_test.to(device), y_test.to(device)\n",
+        "\n",
+        "# Training loop\n",
+        "epochs = 1000\n",
+        "for epoch in range(epochs):\n",
+        "    # Training\n",
+        "    model.train()\n",
+        "    y_logits = model(X_train)\n",
+        "    loss = loss_fn(y_logits, y_train)\n",
+        "\n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    # Evaluation\n",
+        "    model.eval()\n",
+        "    with torch.no_grad():\n",
+        "        test_logits = model(X_test)\n",
+        "        test_loss = loss_fn(test_logits, y_test)\n",
+        "        test_preds = torch.round(torch.sigmoid(test_logits))\n",
+        "        test_acc = (test_preds == y_test).float().mean().item() * 100\n",
+        "\n",
+        "    # Print progress\n",
+        "    if epoch % 100 == 0:\n",
+        "        print(f\"Epoch {epoch} | Loss: {loss:.4f} | Test Loss: {test_loss:.4f} | Test Acc: {test_acc:.2f}%\")\n",
+        "\n",
+        "    # Early stopping\n",
+        "    if test_acc >= 96.0:\n",
+        "        print(f\"Reached 96% accuracy at epoch {epoch}!\")\n",
+        "        break\n"
+      ],
+      "metadata": {
+        "id": "C52TEYd0RuWQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "OIFUUo16Uzzi"
       },
       "execution_count": null,
       "outputs": []
