--- a/ComputerVision_PyTorch.ipynb
+++ b/ComputerVision_PyTorch.ipynb
@@ -7,7 +7,8 @@
       "provenance": [],
       "gpuType": "A100",
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPGwlt4/wnMCnN/k/NBCzWp",
+      "mount_file_id": "1W8Zp4YeTlkN4ZdW_QWdvkimMZR-yjMQy",
+      "authorship_tag": "ABX9TyMqu3uPlQ9Hn6C4ejQZiY1G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -391,6 +392,7 @@
         "More specifically, we want to turn our data into batches (or mini-batches)\n",
         "\n",
         "Q) Why do we do this?\n",
+        "\n",
         "A) The data takes up memory, and we have 60,000 training mages and 10,000 testing images. To alleviate this memeory load, we break the data up into batches. More Specifically:\n",
         "\n",
         "1. It is more computationally efficient, as in, your computing hardware may not be able to look at (store in memory) 60000 images at once. Thus we brak these images up into batches of 32 (batch_size=32). This is a very common batch size.\n",
@@ -1225,8 +1227,8 @@
     {
       "cell_type": "code",
       "source": [
-        "model_1_results\n",
-        "model_1_results"
+        "\n",
+        "model_0_results"
       ],
       "metadata": {
         "id": "bva9aS7vzoct"
@@ -1236,9 +1238,221 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "total_train_time_model_0, total_train_time_model_1"
+      ],
       "metadata": {
         "id": "yJBYQdJ56nm5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### It's interesting to see that the model ran on the GPU took about the same time to run as the one on the cpu! This is likely down to the fact that this model isn't that large, and our code for setting up the layers in the CNN is also not that complex.\n",
+        "\n",
+        "> **Note**: Sometimes, depending on your data/hardware you might find that your model trains faster on a CPU than a GPU\n",
+        "\n",
+        "> Why is this?\n",
+        "> 1. It could be that the overheadfor copying data/model to and from the GPU outweighs the compute benefits offered by the GPU. So there is some extra time involved in copying the data to the GPU.\n",
+        "> 2. The hardware you're using has a better CPU in terms of its capability than the GPU.\n",
+        "\n",
+        "See this article about gpu's:\n",
+        "https://horace.io/brrr_intro.html"
+      ],
+      "metadata": {
+        "id": "ijMHz2aYO3YN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Now to evaluate our model we need to remember to put the results on the gpu!"
+      ],
+      "metadata": {
+        "id": "PslYwQybTnev"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def eval_model(model: torch.nn.Module, data_loader: torch.utils.data.DataLoader, loss_fn: torch.nn.Module, accuracy_fn, device=device):\n",
+        "    '''\n",
+        "    Returns a dictionary containing the results of model predicting on data_loader\n",
+        "    '''\n",
+        "    loss, acc = 0, 0\n",
+        "    model.eval()\n",
+        "    with torch.inference_mode():\n",
+        "        for X, y in tqdm(data_loader):\n",
+        "            # Make our data device agnostic\n",
+        "            X, y = X.to(device), y.to(device)\n",
+        "            # Make predictions\n",
+        "            y_pred = model(X) # note, don't have to specify model, see above\n",
+        "\n",
+        "            # Accumulate the loss and acc values per batch\n",
+        "            loss += loss_fn(y_pred, y)\n",
+        "            acc += accuracy_fn(y_true=y, y_pred=y_pred.argmax(dim=1))\n",
+        "\n",
+        "        # Scale loss and acc to find the average loss/acc per batch\n",
+        "        loss /= len(data_loader)\n",
+        "        acc /= len(data_loader)\n",
+        "    return {\"model_name\": model.__class__.__name__, # only works when model was created with a class\n",
+        "            \"model_loss\": loss.item(),\n",
+        "            \"model_acc\": acc}\n"
+      ],
+      "metadata": {
+        "id": "7Jw4XOfATlIB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get model_1 results dictionary\n",
+        "model_1_results = eval_model(model=model_1,\n",
+        "                             data_loader=test_dataloader,\n",
+        "                             loss_fn=loss_fn,\n",
+        "                             accuracy_fn=accuracy_fn,\n",
+        "                             device=device)\n",
+        "model_1_results"
+      ],
+      "metadata": {
+        "id": "Zf6ld4AgO13k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "compared with"
+      ],
+      "metadata": {
+        "id": "YzhXgPNwYoXe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_0_results"
+      ],
+      "metadata": {
+        "id": "cH6RnIqvYLHT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Model 2: Building Convolutional Neural Netowrk (CNN)\n",
+        "\n",
+        "CNN's arre known as ConvNET's\n",
+        "\n",
+        "CNN's are known for their capabilities to find patterns in visual data\n",
+        "\n",
+        "#### Below is a table outlining critical pieces of a CNN"
+      ],
+      "metadata": {
+        "id": "CTlyzNRvZASR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "| **Hyperparameter/Layer Type**         | **What does it do?**                                                                 | **Typical Values**                                                                                      |\n",
+        "|----------------------------------------|-------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------|\n",
+        "| **Input image(s)**                     | Target images you'd like to discover patterns in                                     | Whatever you can take a photo (or video) of                                                            |\n",
+        "| **Input layer**                        | Takes in target images and preprocesses them for further layers                     | `input_shape = [batch_size, image_height, image_width, color_channels]` (channels last) or              |\n",
+        "|                                        |                                                                                     | `input_shape = [batch_size, color_channels, image_height, image_width]` (channels first)               |\n",
+        "| **Convolution layer**                  | Extracts/learns the most important features from target images                      | Multiple, can create with `torch.nn.ConvXd()` (X can be multiple values)                               |\n",
+        "| **Hidden activation/non-linear activation** | Adds non-linearity to learned features (non-straight lines)                         | Usually ReLU (`torch.nn.ReLU()`), though can be many more                                              |\n",
+        "| **Pooling layer**                      | Reduces the dimensionality of learned image features                                | Max (`torch.nn.MaxPool2d()`) or Average (`torch.nn.AvgPool2d()`)                                       |\n",
+        "| **Output layer/linear layer**          | Takes learned features and outputs them in shape of target labels                   | `torch.nn.Linear(out_features=[number_of_classes])` (e.g., 3 for pizza, steak, or sushi)               |\n",
+        "| **Output activation**                  | Converts output logits to prediction probabilities                                  | `torch.sigmoid()` (binary classification) or `torch.softmax()` (multi-class classification)            |\n"
+      ],
+      "metadata": {
+        "id": "OWRL_NVoadxP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To find out what's happening inside a CNN, see this website:\n",
+        "\n",
+        "https://poloclub.github.io/cnn-explainer/"
+      ],
+      "metadata": {
+        "id": "cMCneqygijHY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a CNN\n",
+        "class FashionMNISTModelV2(nn.Module):\n",
+        "    '''\n",
+        "    Model architecture that replicates that replicates the TinyVGG\n",
+        "    model from the CNN Explainer website.\n",
+        "    '''\n",
+        "    def __init__(self, input_shape: int, hidden_units: int, output_shape: int):\n",
+        "        super().__init__()\n",
+        "        self.conv_block_1 = nn.Sequential(\n",
+        "            nn.Conv2d(in_channels=input_shape,\n",
+        "                      out_channels=hidden_units,\n",
+        "                      kernel_size=3,\n",
+        "                      stride=1,\n",
+        "                      padding=1), # values we can set ourselves- hyperparameters\n",
+        "            nn.ReLU(),\n",
+        "            nn.Conv2d(in_channels=hidden_units,\n",
+        "                      out_channels=hidden_units,\n",
+        "                      kernel_size=3,\n",
+        "                      stride=1,\n",
+        "                      padding=1),\n",
+        "            nn.ReLU(),\n",
+        "            nn.MaxPool2d(kernel_size=2,\n",
+        "                         stride=2)\n",
+        "        )\n",
+        "        self.conv_block_2 = nn.Sequential(\n",
+        "            nn.Conv2d(in_channels=hidden_units,\n",
+        "            out_channels=hidden_units,\n",
+        "            kernel_size=3,\n",
+        "            padding=1),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Conv2d(in_channels=hidden_units,\n",
+        "            out_channels=hidden_units,\n",
+        "            kernel_size=3,\n",
+        "            padding=1),\n",
+        "            nn.ReLU(),\n",
+        "            nn.MaxPool2d(kernel_size=2,)\n",
+        "        )\n",
+        "        self.classifier = nn.Sequential(\n",
+        "            nn.Flatten(),\n",
+        "            nn.Linear(in_features=hidden_units*0,\n",
+        "            out_features=output_shape)\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = self.conv_block_1(x)\n",
+        "        print(x.shape)\n",
+        "        x = self.conv_block_2(x)\n",
+        "        print(x.shape)\n",
+        "        x = self.classifier(x)\n",
+        "        return x"
+      ],
+      "metadata": {
+        "id": "WKKwG535Yr_G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "oeotTbRbedDp"
       },
       "execution_count": null,
       "outputs": []
