--- a/ComputerVision_PyTorch.ipynb
+++ b/ComputerVision_PyTorch.ipynb
@@ -8,7 +8,7 @@
       "gpuType": "A100",
       "machine_shape": "hm",
       "mount_file_id": "1W8Zp4YeTlkN4ZdW_QWdvkimMZR-yjMQy",
-      "authorship_tag": "ABX9TyMqu3uPlQ9Hn6C4ejQZiY1G",
+      "authorship_tag": "ABX9TyOO6vPNX4ew3Y+AXXXxYK9b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1450,9 +1450,88 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "torch.manual_seed(42)\n",
+        "model_2 = FashionMNISTModelV2(input_shape=1, # since we're working with greyscale images the coloe channel is 1\n",
+        "                              hidden_units=10,\n",
+        "                              output_shape=len(class_names)).to(device)"
+      ],
       "metadata": {
         "id": "oeotTbRbedDp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Stepping through `nn.Conv2d()`\n",
+        "```\n",
+        "classtorch.nn.Conv2d(in_channels, out_channels, kernel_size, stride=1, padding=0, dilation=1, groups=1, bias=True, padding_mode='zeros', device=None, dtype=None)```\n",
+        "\n",
+        "docs:\n",
+        "\n",
+        "https://pytorch.org/docs/stable/generated/torch.nn.Conv2d.html\n"
+      ],
+      "metadata": {
+        "id": "VvmW1-swHqWv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_2.state_dict()"
+      ],
+      "metadata": {
+        "id": "CthfgPVqKTdp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(42)\n",
+        "\n",
+        "# Create a batch of images\n",
+        "images = torch.randn(size=(32, 3, 64, 64))\n",
+        "test_image = images[0]\n",
+        "\n",
+        "print(f\"Image shape: {image.shape}\")\n",
+        "print(f\"Single image shape: {test_image.shape}\")\n",
+        "print(f\"Test image:\\n{test_image}\")"
+      ],
+      "metadata": {
+        "id": "bDLEGTIXHI8j"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a single conv2d layer\n",
+        "conv_layer = nn.Conv2d(in_channels=3,\n",
+        "                       out_channels=10,\n",
+        "                       kernel_size=3, # kernel also known as a filter (3x3)\n",
+        "                       stride=1,\n",
+        "                       padding=0)\n",
+        "\n",
+        "# pass the data through the convolutional layer\n",
+        "conv_output = conv_layer(test_image.unsqueeze(0))\n",
+        "conv_output"
+      ],
+      "metadata": {
+        "id": "iXWH0cNkKIzL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Pq2tzO9TRrNu"
       },
       "execution_count": null,
       "outputs": []
