--- a/ComputerVision_PyTorch.ipynb
+++ b/ComputerVision_PyTorch.ipynb
@@ -8,7 +8,7 @@
       "gpuType": "A100",
       "machine_shape": "hm",
       "mount_file_id": "1W8Zp4YeTlkN4ZdW_QWdvkimMZR-yjMQy",
-      "authorship_tag": "ABX9TyOGSE3OaNSG2lVUS4Fy4XCy",
+      "authorship_tag": "ABX9TyPBnwbOWSMfJ7kxP0RDxz2V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2709,17 +2709,124 @@
     {
       "cell_type": "markdown",
       "source": [
-        "What does the confusion matrix tell us? It looks like our model is predicting high values of shirt, when the true label is T-shirt/top, the model is also predicting a shirt, when the true label is coat."
+        "**What does the confusion matrix tell us?** It looks like our model is predicting high values of shirt, when the true label is T-shirt/top, the model is also predicting a shirt, when the true label is coat. Further, it looks like the model is confusing ankleboots and sneakers. In other words, the confusion matrix can give us information about how well are model is classifying the the correct labels with accord to the 'ground truth'."
       ],
       "metadata": {
         "id": "kHCBqraOWYD_"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Save and load best perfoming model"
+      ],
+      "metadata": {
+        "id": "f8SBDwQ0Sntp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pathlib import PosixPath\n",
+        "# Create a model directory path\n",
+        "MODEL_PATH = Path(\"models\")\n",
+        "MODEL_PATH.mkdir(parents=True, exist_ok=True)\n",
+        "\n",
+        "# Create model save\n",
+        "MODEL_NAME = \"03_pythorch_computervision_model_2.pth\"\n",
+        "MODEL_SAVE_PATH = MODEL_PATH / MODEL_NAME\n",
+        "\n",
+        "# Save the model state dict\n",
+        "print(f\"Saving model to: {MODEL_SAVE_PATH}\")\n",
+        "torch.save(obj=model_2.state_dict(), # has all the trained weights & biases\n",
+        "           f=MODEL_SAVE_PATH)\n"
+      ],
+      "metadata": {
+        "id": "e4XP1YKBS8fa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a new instance of model_2\n",
+        "torch.manual_seed(42)\n",
+        "loaded_model_2 = FashionMNISTModelV2(input_shape = 1,\n",
+        "                              hidden_units = 10,\n",
+        "                              output_shape=len(class_names))\n",
+        "\n",
+        "# Load in the state_dict()\n",
+        "loaded_model_2.load_state_dict(torch.load(f=MODEL_SAVE_PATH))\n",
+        "\n",
+        "# Load the model to the target device\n",
+        "loaded_model_2.to(device)\n",
+        "\n",
+        "# Sens the model to the target device\n",
+        "loaded_model_2.to(device)"
+      ],
+      "metadata": {
+        "id": "qVkCXoTMTmAd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_2_results"
+      ],
+      "metadata": {
+        "id": "xXjN3_RHVpyi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Evaluate the loaded model\n",
+        "loaded_model_2_results = eval_model(model=loaded_model_2,\n",
+        "                                    data_loader=test_dataloader,\n",
+        "                                    loss_fn=loss_fn,\n",
+        "                                    accuracy_fn=accuracy_fn,\n",
+        "                                    device=device)\n",
+        "loaded_model_2_results\n"
+      ],
+      "metadata": {
+        "id": "zGMwCqp4U_c0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# How does the saved model compare with the original???"
+      ],
+      "metadata": {
+        "id": "3ZG0wNVZXnVB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check if model results are close to each other\n",
+        "torch.isclose(torch.tensor(model_2_results[\"model_loss\"]),\n",
+        "torch.tensor(loaded_model_2_results[\"model_loss\"]),\n",
+        "              atol=1e-08)"
+      ],
+      "metadata": {
+        "id": "3754-UNgV4j8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "e4XP1YKBS8fa"
+        "id": "AzKih2xAXg5O"
       },
       "execution_count": null,
       "outputs": []
